# exp-som-comparison

./: README.md  early.csv  notes.txt  results.csv  run.sh  runEarly.sh  som-comparison.cabal
resultsForPaper/: scsBig.html  scsBigQuick.html  scsSmall.html  scsSmallQuick.html  somBig.html  somSmall.html
src/: Image.hs  SGMMain.hs  SOMMain.hs  SOMQuickMain.hs  SOSMain.hs  SOSQuickMain.hs  Util.hs
