name:                exp-som-comparison
version:             0.1.0.0
synopsis:            Compare SOM and SOM alternatives for article.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Amy de Buitléir
maintainer:          amy@nualeargais.ie
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable exp-som-comparison-quick-sos
  main-is:             SOSQuickMain.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:      -Wall -fno-warn-orphans
  build-depends:       array ==0.5.*,
                       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       mtl ==2.2.*,
                       exceptions ==0.8.*,
                       filepath ==1.4.*,
                       grid ==7.8.*,
                       directory ==1.2.*,
                       MonadRandom ==0.4.*,
                       JuicyPixels ==3.2.*,
                       split ==0.2.*,
                       utf8-string ==1.*,
                       vector ==0.10.*,
                       som ==8.2.*,
                       containers ==0.5.*

executable exp-som-comparison-quick-som
  main-is:             SOMQuickMain.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:      -Wall -fno-warn-orphans
  build-depends:       array ==0.5.*,
                       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       grid ==7.8.*,
                       mtl ==2.2.*,
                       exceptions ==0.8.*,
                       filepath ==1.4.*,
                       directory ==1.2.*,
                       MonadRandom ==0.4.*,
                       JuicyPixels ==3.2.*,
                       split ==0.2.*,
                       utf8-string ==1.*,
                       vector ==0.10.*,
                       som ==8.2.*,
                       containers ==0.5.*

executable exp-som-comparison-sos
  main-is:             SOSMain.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:      -Wall -fno-warn-orphans
  build-depends:       array ==0.5.*,
                       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       mtl ==2.2.*,
                       exceptions ==0.8.*,
                       filepath ==1.4.*,
                       grid ==7.8.*,
                       directory ==1.2.*,
                       MonadRandom ==0.4.*,
                       JuicyPixels ==3.2.*,
                       split ==0.2.*,
                       utf8-string ==1.*,
                       vector ==0.10.*,
                       som ==8.2.*,
                       containers ==0.5.*

executable exp-som-comparison-som
  main-is:             SOMMain.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:      -Wall -fno-warn-orphans
  build-depends:       array ==0.5.*,
                       base >=4.8 && <4.9,
                       base64-bytestring ==1.0.*,
                       bytestring ==0.10.*,
                       grid ==7.8.*,
                       mtl ==2.2.*,
                       exceptions ==0.8.*,
                       filepath ==1.4.*,
                       directory ==1.2.*,
                       MonadRandom ==0.4.*,
                       JuicyPixels ==3.2.*,
                       split ==0.2.*,
                       utf8-string ==1.*,
                       vector ==0.10.*,
                       som ==8.2.*,
                       containers ==0.5.*
